# shipwright

./: .env.example  .gitattributes  .gitignore  .trivyignore.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  audit_config.json  pyproject.toml  shipwright_accepted_risks.yaml  shipwright_bloat_baseline.json  shipwright_build_config.json  shipwright_compliance_config.json  shipwright_events.jsonl  shipwright_iterate_config.json  shipwright_plan_config.json  shipwright_project_config.json  shipwright_run_config.json  shipwright_security_config.json  shipwright_sync_config.json  shipwright_test_config.json  shipwright_test_results.json
plugins/shipwright-adopt/: .gitignore  pyproject.toml
plugins/shipwright-adopt/.claude-plugin/: plugin.json
plugins/shipwright-adopt/hooks/: hooks.json
plugins/shipwright-adopt/tests/: conftest.py  contract_repos.py  test_adopt_commit_template.py  test_adopt_pipeline_subprocess.py  test_artifact_writer.py  test_artifact_writer_data_preservation.py  test_automerge_setup_scaffold.py  test_baseline_generator.py  test_brief_intake_adopt.py  test_ci_detector.py  test_ci_workflow_scaffold.py  test_cli_paths.py  test_codeql_workflow_scaffold.py  test_compliance_bridge_fallback.py  test_component_inventory.py  test_component_inventory_props_count.py  test_config_writer.py  test_convention_detector.py  test_cross_links.py  test_data_preservation_realistic.py  test_design_tokens.py  test_dry_run_reporter.py  test_e2e_baseline_generator.py  test_enrichment_fallback.py  test_enrichment_validation.py  test_event_seeder.py  test_feature_inferrer.py  test_features_additive_merge.py  test_folder_introspector.py  test_fr_id_sequence.py  test_fr_layer_inference.py  test_git_analyzer_refactor_commits.py  test_git_analyzer_utf8.py  test_gitattributes_scaffold.py  test_gitignore_check.py  test_gitleaks_config_scaffold.py  test_hook_installer.py  test_known_issues_inventory.py  test_known_issues_test_fixture_filter.py  test_multi_service_detector.py  (+26 more)
plugins/shipwright-build/: pyproject.toml
plugins/shipwright-build/.claude-plugin/: plugin.json
plugins/shipwright-build/agents/: code-reviewer.md  doubt-reviewer.md  section-builder.md  section_builder_contract.schema.json  spec-reviewer.md
plugins/shipwright-build/hooks/: hooks.json
plugins/shipwright-build/tests/: conftest.py  test_config.py  test_hooks.py  test_integration.py  test_reviewer_orchestration.py  test_section_builder_contract.py  test_sections.py  test_setup_implementation.py  test_skill_references_link.py  test_tools.py
plugins/shipwright-changelog/: pyproject.toml
plugins/shipwright-changelog/.claude-plugin/: plugin.json
plugins/shipwright-changelog/hooks/: hooks.json
plugins/shipwright-changelog/tests/: conftest.py  test_changelog.py  test_git_utils.py  test_integration.py
plugins/shipwright-compliance/: pyproject.toml
plugins/shipwright-compliance/.claude-plugin/: plugin.json
plugins/shipwright-compliance/hooks/: hooks.json
plugins/shipwright-compliance/tests/: conftest.py  test_accepted_risk_view.py  test_audit_adapters.py  test_audit_d5_change_type.py  test_audit_d_mint_coverage.py  test_audit_detector.py  test_audit_freshness.py  test_audit_gate_behavior_probe.py  test_audit_group_a5.py  test_audit_group_a5_phase_b.py  test_audit_group_b.py  test_audit_group_e.py  test_audit_group_g.py  test_audit_group_h.py  test_audit_group_i.py  test_audit_group_i_basis.py  test_audit_group_i_detectors.py  test_audit_group_i_states.py  test_audit_groups_a_d.py  test_audit_groups_c_f.py  test_audit_honors_amendments.py  test_audit_report.py  test_audit_snapshot.py  test_audit_staleness.py  test_audit_staleness_agent_docs.py  test_change_history.py  test_ci_security.py  test_collectors_dashboard.py  test_compliance_artifact_usability.py  test_compliance_report.py  test_control_grade.py  test_control_grade_change_traceability.py  test_control_grade_diff_coverage.py  test_d1_hardening.py  test_dashboard_iterate_row.py  test_data_collector.py  test_data_collector_determinism.py  test_data_collector_requirements.py  test_data_collector_shim.py  test_diff_coverage_block.py  (+50 more)
plugins/shipwright-deploy/: pyproject.toml
plugins/shipwright-deploy/.claude-plugin/: plugin.json
plugins/shipwright-deploy/hooks/: hooks.json
plugins/shipwright-deploy/tests/: conftest.py  test_jelastic_client.py  test_migration_verifier.py  test_rollback.py  test_validate_deploy.py
plugins/shipwright-design/: pyproject.toml
plugins/shipwright-design/.claude-plugin/: plugin.json
plugins/shipwright-design/hooks/: hooks.json
plugins/shipwright-design/tests/: conftest.py  test_screen_registry.py  test_setup_design.py  test_skill_references_link.py
plugins/shipwright-grade/: pyproject.toml
plugins/shipwright-grade/.claude-plugin/: plugin.json
plugins/shipwright-grade/tests/: conftest.py  contract_support.py  support.py  test_authoritative.py  test_clone.py  test_coverage_heuristic.py  test_dependency_signal.py  test_engine_bridge.py  test_gh_bridge.py  test_git_exec.py  test_grade_cli.py  test_html_report.py  test_html_security.py  test_junit_xml.py  test_negative_fixtures.py  test_network_policy.py  test_normalize_input.py  test_projector_capture.py  test_projector_fixtures.py  test_provenance_signal.py  test_render_network.py  test_render_snapshots.py  test_render_terminal.py  test_repo_context.py  test_report_model.py  test_report_model_contract.py  test_resolve_target.py  test_reused_collector_audit.py  test_routing.py  test_routing_record_boundary.py  test_sanitize.py  test_security_signal.py  test_signal_bundle.py  test_size_signal.py  test_synthetic_projection.py  test_test_health_signal.py
plugins/shipwright-iterate/: pyproject.toml
plugins/shipwright-iterate/.claude-plugin/: plugin.json
plugins/shipwright-plan/: .env.example  config.json  pyproject.toml
plugins/shipwright-project/: pyproject.toml
plugins/shipwright-run/: pyproject.toml
plugins/shipwright-security/: .env.example  pyproject.toml
plugins/shipwright-test/: pyproject.toml
(+3167 files in other folders)
