[project]
name = "shipwright"
version = "0.5.0"
description = "AI-powered SDLC framework built on Claude Code"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sven Roth"}
]
keywords = ["claude-code", "sdlc", "ai-framework", "plugin"]
dependencies = [
    "openai>=2.30.0",
    "jsonschema>=4.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["integration-tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests that spawn subprocesses or perform long I/O (excluded from the default run; use `pytest -m slow`)",
    "cross_plugin: tests that import another plugin's lib/tools modules. The cross-plugin namespace collision is structural (ADR-044) and hard-fails in CI from a shared/tests session via test_hygiene.import_or_fail_in_ci — they must run under their owning plugin's pytest session, so they are excluded from the `shared/tests` CI step (`-m 'not cross_plugin'`).",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
