[project]
name = "shipwright"
version = "0.30.0"
description = "AI-powered SDLC framework built on Claude Code"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sven Roth"}
]
keywords = ["claude-code", "sdlc", "ai-framework", "plugin"]
dependencies = [
    "openai>=2.30.0",
    "jsonschema>=4.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    # Diff-coverage measurement chain (roadmap Phase 1). pytest-cov produces
    # coverage.xml; diff-cover computes % of CHANGED lines covered vs the
    # merge-base. See shared/scripts/tools/measure_diff_coverage.py. CI
    # provisions pytest-cov via `uv run --with pytest-cov` (dev extras are not
    # auto-synced), and runs diff-cover via `uvx`.
    "pytest-cov>=5.0.0",
    "diff-cover>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["integration-tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests that spawn subprocesses or perform long I/O (excluded from the default run; use `pytest -m slow`)",
    "cross_plugin: tests that import another plugin's lib/tools modules. The cross-plugin namespace collision is structural (ADR-044) and hard-fails in CI from a shared/tests session via test_hygiene.import_or_fail_in_ci — they must run under their owning plugin's pytest session, so they are excluded from the `shared/tests` CI step (`-m 'not cross_plugin'`).",
]

# ---------------------------------------------------------------------------
# Ruff — bug-focused lint GATE (enforced by .github/workflows/ci.yml).
#
# This is a deliberately curated, high-signal ruleset for a solo / small-team
# monorepo — NOT ruff's full default set. The goal is to catch real defects
# (undefined names, unused imports/variables, f-string mistakes, comparison
# and bare-except bugs) while skipping the purely-cosmetic whitespace/layout
# rules that only generate churn on this repo's sys.path-bootstrapping scripts.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
# Intentional sample/bad code (security scanner bait, adopt sample projects)
# — these must never be auto-mutated by `ruff check --fix`.
extend-exclude = ["**/tests/fixtures", "**/tests/fixtures/**"]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes — entirely bug-class: F401 unused-import, F811 redefinition,
             #            F821 undefined-name, F841 unused-variable, F50x/F541 f-string bugs
    "E711",  # comparison to None should use `is` / `is not`
    "E712",  # comparison to True/False should use `is` / truthiness
    "E713",  # membership test should be `not in`
    "E714",  # identity test should be `is not`
    "E721",  # type comparison should use `is` / isinstance, not `==`
    "E722",  # bare `except:`
    "E902",  # IO / tokenization error
    "W605",  # invalid escape sequence in string literal
]
# Cosmetic pycodestyle rules ruff selects by default are intentionally OMITTED
# (not in `select` above): E401/E402 import placement, E701-E704 one-liners,
# E731 lambda-assign, E741 ambiguous single-char names. They fire heavily on
# this repo's bootstrapping scripts without catching bugs.

# ---------------------------------------------------------------------------
# Coverage (diff-coverage roadmap Phase 1). Only used when pytest runs with
# --cov (CI's "Run shared tests" step); a plain `pytest` run is unaffected.
# ---------------------------------------------------------------------------
[tool.coverage.run]
# Repo-relative paths so diff-cover can match coverage.xml entries against git
# paths regardless of the checkout's absolute location (CI ubuntu vs local
# Windows). Without this, coverage.xml records absolute paths and diff-cover
# finds "no lines with coverage information".
relative_files = true
# The tier's own test files are not product code — exclude them so the line-rate
# reflects source coverage, not tests-covering-themselves.
omit = [
    "*/tests/*",
    "*/tests/fixtures/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
