[project]
name = "shipwright-adopt"
version = "0.2.0"
description = "Claude Code plugin for onboarding existing repositories into the Shipwright SDLC"
requires-python = ">=3.11"
readme = "../../README.md"
license = {text = "MIT"}
authors = [
    {name = "Sven Roth"}
]
keywords = ["claude-code", "plugin", "adoption", "onboarding", "brownfield"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests that spawn real subprocesses or perform long I/O (excluded from the default run; use `pytest -m slow`)",
    "covers: binds a test to one or more FRs for requirement->test traceability (@FR tags, Spec D1)",
]
