[project]
name = "shipwright-iterate"
version = "0.3.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that spawn subprocesses or perform long I/O (e.g. the behavior_snapshot CLI integration test). Run with `pytest -m slow`; skip with `-m 'not slow'`.",
    "cross_plugin: tests that import another plugin's lib/tools modules (excluded from shared/tests CI sessions, see ADR-044).",
]
