[project]
name = "shipwright-plan"
version = "0.1.0"
description = "Claude Code plugin for deep planning with research, interview, and external LLM review"
requires-python = ">=3.11"
readme = "../../README.md"
license = {text = "MIT"}
authors = [
    {name = "Sven Roth"}
]
keywords = ["claude-code", "plugin", "planning", "tdd", "architecture", "llm-review"]
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
]
