[project]
name = "shipwright-project"
version = "0.1.0"
description = "Claude Code plugin for decomposing requirements into plannable units"
requires-python = ">=3.11"
readme = "../../README.md"
license = {text = "MIT"}
authors = [
    {name = "Sven Roth"}
]
keywords = ["claude-code", "plugin", "planning", "decomposition", "requirements"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
]
