[project]
name = "py-cli-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "psycopg>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
